autoflow/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autoflow
  labels:
    name: autoflow
